Fix layout issues in Firefox

--- a/browser/journey-create/journey-create.css
+++ b/browser/journey-create/journey-create.css
@@ -1,3 +1,15 @@
+
+/*Firefox only fix*/
+@-moz-document url-prefix() {
+    .create-post-img-container {
+        min-height: 200px;
+    }
+
+    .create-post-img {
+        height: 100%;
+    }
+}
+
 .post-scroll-container {
     height: 100vh;
     position: relative;
@@ -53,6 +65,7 @@ md-input-container {
 .img-select-option {
     height: 100px;
     object-fit: cover;
+    border: 1px solid lightgrey;
 }
 
 .datepicker-container {
